--- a/Practica2CSS/Ejercicio6/principal.html
+++ b/Practica2CSS/Ejercicio6/principal.html
@@ -1,20 +1,19 @@
 <!DOCTYPE HTML
   PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3c.org/TR/1999/REChtml401-19991224/loose.dtd">
-<HTML lang=es xmlns="http://www.w3.org/1999/xhtml">
+<HTML lang="es" xmlns="http://www.w3.org/1999/xhtml">
 
 <HEAD>
   <TITLE>Página Principal</TITLE>
-  <META http-equiv=Content-Type content="text/html; charset=iso-8859-1">
-  </META>
-  <link rel="StyleSheet" href="estilos2.css" type="text/css">
-
+  <META http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <link rel="stylesheet" href="estilos2.css" type="text/css">
 </HEAD>
 
 <BODY>
-  <DIV id=titulo>
+  <DIV id="encabezado">
     <H1>ASIGNATURA ELECTIVA</H1>
   </DIV>
-  <DIV id=contenido>
+
+  <DIV id="contenido">
     <H2>Contenido</H2>
     <p>En esta asignatura ...........................<BR></p>
     <P>El objetivo fundamental ..................</P>
@@ -28,15 +27,17 @@
     <P>etc., etc., ...........................................</P>
     <P>&nbsp;</P>
   </DIV>
-  <DIV id=menu class=navBar>
+
+  <DIV id="menu">
     <H3>Enlaces</H3>
-    <UL>
-      <LI><A href="http://www.e-style.com.ar/moodle" target=_blank>Curso Actual</A>
-      <LI><A href="http://www.e-style.com.ar/logica" target=_blank>Curso anterior</A> </LI>
-      <LI><A href="http://www.e-style.com.ar/ntedu/consultas.htm" target=_blank>Contacto</A></LI>
+    <UL class="vineta">
+      <LI><A href="http://www.e-style.com.ar/moodle" target="_blank">Curso Actual</A></LI>
+      <LI><A href="http://www.e-style.com.ar/logica" target="_blank">Curso anterior</A></LI>
+      <LI><A href="http://www.e-style.com.ar/ntedu/consultas.htm" target="_blank">Contacto</A></LI>
     </UL>
   </DIV>
-  <DIV id=pie>Ingeniería en Sistemas de Información - Universidad Tecnológica Nacional Rosario</DIV>
+
+  <DIV id="pie" class="estilopie">Ingeniería en Sistemas de Información - Universidad Tecnológica Nacional Rosario</DIV>
   <p>&nbsp;</p>
 </BODY>
 
